# XPCoin

./: .gitignore  CMakeLists.txt
src/: makefile.unix  net.cpp
